--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -101,7 +101,7 @@ http {
         <% end %>
 
         set $prerender 0;
-        if ($http_user_agent ~* "baiduspider|twitterbot|facebookexternalhit|rogerbot|linkedinbot|embedly|quora link preview|showyoubot|outbrain|pinterest|slackbot") {
+        if ($http_user_agent ~* "bingbot|baiduspider|twitterbot|facebookexternalhit|rogerbot|linkedinbot|embedly|quora link preview|showyoubot|outbrain|pinterest|slackbot") {
           set $prerender 1;
         }
         if ($args ~ "_escaped_fragment_") {
